# RuleShield

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dashboard  HACKATHON_SUBMISSION.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  package.json  pyproject.toml
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md
dashboard/: .gitignore  package-lock.json  package.json  svelte.config.js
demo/: _helpers.sh  gateway_ctl.sh  test_all.sh  test_clean_install_no_post_steps.sh  test_code_review.sh  test_cron_replacement.sh  test_morning_workflow.sh  test_research.sh  test_shadow_coverage_check.openrouter_arcee_trinity_free.sh  test_shadow_coverage_check.openrouter_stepfun_flash_free.sh  test_shadow_coverage_check.sh  test_training_health_check.openrouter_arcee_trinity_free.sh  test_training_health_check.openrouter_stepfun_flash_free.sh  test_training_health_check.sh  test_training_hermes_user_suite.openrouter_arcee_trinity_free.sh  test_training_hermes_user_suite.openrouter_stepfun_flash_free.sh  test_training_hermes_user_suite.sh  test_training_vibecoder_suite.openrouter_arcee_trinity_free.sh  test_training_vibecoder_suite.openrouter_stepfun_flash_free.sh  test_training_vibecoder_suite.sh
docs/: RuleShield_Architecture.md  RuleShield_CronReplacement_Concept.md  RuleShield_Design.md  RuleShield_Hermes_Checklist.md  RuleShield_Hermes_Hackathon.md  RuleShield_OSS_LaunchPlan.md  RuleShield_OpenCore_PRD.md  RuleShield_PRD.md  RuleShield_PR_Agent_PRD.md  cron-optimization-implementation-plan.md  cron-optimization-spec.md  cron-optimizer-quickstart.md  cron-optimizer-user-guide.md  cron-runtime-guide.md  current-issues.md  hackathon-1-minute-recording-cheatsheet.md  hackathon-discord-submission.md  (+29 more)
engine/rulecore/: __init__.py  conditions.py  engine.py  feedback.py  loader.py  pyproject.toml  scoring.py  setup.cfg  store.py  types.py
engine/rulecore/tests/: test_conditions.py  test_engine.py  test_feedback.py  test_loader.py  test_scoring.py  test_store.py  test_types.py
(+269 files in other folders)
