[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rulecore"
version = "0.1.0"
description = "Generic pattern-matching rule engine with weighted scoring and feedback loops"
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["."]
include = ["rulecore*"]
